deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dibs
  namespace: dibs
  labels:
    app: dibs
spec:
  selector:
    app: dibs
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
